[gd_scene load_steps=4 format=2]

[ext_resource path="res://HighScore.gd" type="Script" id=1]
[ext_resource path="res://assets/ocean_background.png" type="Texture" id=2]
[ext_resource path="res://ButtonTheme.tres" type="Theme" id=3]

[node name="HighScore" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1030.0
margin_bottom = 610.0
texture = ExtResource( 2 )
expand = true

[node name="ScoreMessage" type="Label" parent="TextureRect"]
margin_left = 380.0
margin_top = 300.0
margin_right = 524.0
margin_bottom = 317.0
theme = ExtResource( 3 )
text = "Your score:"

[node name="PlayerScore" type="Label" parent="TextureRect"]
margin_left = 560.0
margin_top = 300.0
margin_right = 720.0
margin_bottom = 337.0
theme = ExtResource( 3 )
text = "0
"

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect"]
visible = false
margin_left = 120.0
margin_top = 40.0
margin_right = 950.0
margin_bottom = 561.0
custom_constants/separation = 500

[node name="LeftScores" type="VBoxContainer" parent="TextureRect/HBoxContainer"]
margin_right = 31.0
margin_bottom = 521.0
custom_constants/separation = 39

[node name="Label" type="Label" parent="TextureRect/HBoxContainer/LeftScores"]
margin_right = 31.0
margin_bottom = 17.0
theme = ExtResource( 3 )
text = "1"

[node name="Label2" type="Label" parent="TextureRect/HBoxContainer/LeftScores"]
margin_top = 56.0
margin_right = 31.0
margin_bottom = 73.0
theme = ExtResource( 3 )
text = "2"

[node name="Label3" type="Label" parent="TextureRect/HBoxContainer/LeftScores"]
margin_top = 112.0
margin_right = 31.0
margin_bottom = 129.0
theme = ExtResource( 3 )
text = "3"

[node name="Label4" type="Label" parent="TextureRect/HBoxContainer/LeftScores"]
margin_top = 168.0
margin_right = 31.0
margin_bottom = 185.0
theme = ExtResource( 3 )
text = "4"

[node name="Label5" type="Label" parent="TextureRect/HBoxContainer/LeftScores"]
margin_top = 224.0
margin_right = 31.0
margin_bottom = 241.0
theme = ExtResource( 3 )
text = "5"

[node name="Label6" type="Label" parent="TextureRect/HBoxContainer/LeftScores"]
margin_top = 280.0
margin_right = 31.0
margin_bottom = 297.0
theme = ExtResource( 3 )
text = "6"

[node name="Label7" type="Label" parent="TextureRect/HBoxContainer/LeftScores"]
margin_top = 336.0
margin_right = 31.0
margin_bottom = 353.0
theme = ExtResource( 3 )
text = "7"

[node name="Label8" type="Label" parent="TextureRect/HBoxContainer/LeftScores"]
margin_top = 392.0
margin_right = 31.0
margin_bottom = 409.0
theme = ExtResource( 3 )
text = "8"

[node name="Label9" type="Label" parent="TextureRect/HBoxContainer/LeftScores"]
margin_top = 448.0
margin_right = 31.0
margin_bottom = 465.0
theme = ExtResource( 3 )
text = "9"

[node name="Label10" type="Label" parent="TextureRect/HBoxContainer/LeftScores"]
margin_top = 504.0
margin_right = 31.0
margin_bottom = 521.0
theme = ExtResource( 3 )
text = "10"

[node name="RightScores" type="VBoxContainer" parent="TextureRect/HBoxContainer"]
margin_left = 531.0
margin_right = 562.0
margin_bottom = 521.0
custom_constants/separation = 39

[node name="Label" type="Label" parent="TextureRect/HBoxContainer/RightScores"]
margin_right = 31.0
margin_bottom = 17.0
theme = ExtResource( 3 )
text = "1"

[node name="Label2" type="Label" parent="TextureRect/HBoxContainer/RightScores"]
margin_top = 56.0
margin_right = 31.0
margin_bottom = 73.0
theme = ExtResource( 3 )
text = "2"

[node name="Label3" type="Label" parent="TextureRect/HBoxContainer/RightScores"]
margin_top = 112.0
margin_right = 31.0
margin_bottom = 129.0
theme = ExtResource( 3 )
text = "3"

[node name="Label4" type="Label" parent="TextureRect/HBoxContainer/RightScores"]
margin_top = 168.0
margin_right = 31.0
margin_bottom = 185.0
theme = ExtResource( 3 )
text = "4"

[node name="Label5" type="Label" parent="TextureRect/HBoxContainer/RightScores"]
margin_top = 224.0
margin_right = 31.0
margin_bottom = 241.0
theme = ExtResource( 3 )
text = "5"

[node name="Label6" type="Label" parent="TextureRect/HBoxContainer/RightScores"]
margin_top = 280.0
margin_right = 31.0
margin_bottom = 297.0
theme = ExtResource( 3 )
text = "6"

[node name="Label7" type="Label" parent="TextureRect/HBoxContainer/RightScores"]
margin_top = 336.0
margin_right = 31.0
margin_bottom = 353.0
theme = ExtResource( 3 )
text = "7"

[node name="Label8" type="Label" parent="TextureRect/HBoxContainer/RightScores"]
margin_top = 392.0
margin_right = 31.0
margin_bottom = 409.0
theme = ExtResource( 3 )
text = "8"

[node name="Label9" type="Label" parent="TextureRect/HBoxContainer/RightScores"]
margin_top = 448.0
margin_right = 31.0
margin_bottom = 465.0
theme = ExtResource( 3 )
text = "9"

[node name="Label10" type="Label" parent="TextureRect/HBoxContainer/RightScores"]
margin_top = 504.0
margin_right = 31.0
margin_bottom = 521.0
theme = ExtResource( 3 )
text = "10"

[node name="Button" type="Button" parent="TextureRect"]
margin_left = 10.0
margin_top = 10.0
margin_right = 70.0
margin_bottom = 40.0
theme = ExtResource( 3 )
text = "Back!"
[connection signal="pressed" from="TextureRect/Button" to="." method="_on_Button_pressed"]
